# multi_pong

./: .gitignore  Cargo.toml  README.md  default.nix
.github/workflows/: nix.yml  rust.yml
assets/ui/: client_connect.ron  name_input.ron
config/: bindings.ron
examples/: udp.rs  udp_remote.rs
multi_pong/: Cargo.toml  README.md
multi_pong/assets/shader/: inv_color.vert
multi_pong/assets/texture/: pong_spritesheet.ron
multi_pong/assets/ui/: client_addr_input.ron  connecting.ron  mode_select.ron  server_port_input.ron  server_wait.ron
multi_pong/config/: display.ron
multi_pong/src/: constants.rs  lib.rs  main.rs
multi_pong/src/network/: mod.rs
multi_pong/src/render/: invert_color.rs  mod.rs
multi_pong/src/states/: client.rs  in_game.rs  mod.rs  mode_select.rs  player_name.rs  server.rs
multi_pong/src/systems/: ball.rs  handshake.rs  mod.rs  network_system.rs  paddle.rs  winner.rs
rudp/: Cargo.toml  README.md
rudp/examples/: clock_sync.rs  udp_remote.rs
rudp/src/: hand_shake.rs  lib.rs  protocol.rs  receiver.rs  sender.rs
rudp_derive/: Cargo.toml  README.md
rudp_derive/examples/: packet_desc.rs
rudp_derive/src/: lib.rs
src/: constants.rs  main.rs
src/network/: mod.rs  udp.rs
src/states/: client.rs  client_connect.rs  in_game.rs  mod.rs  mode_select.rs  player_name.rs  server_wait.rs
src/systems/: handshake_system.rs  mod.rs  network_system.rs  paddle.rs  winner.rs
