[package]
name = "multi_pong"
version = "0.1.0"
authors = ["switefaster <switefaster@gmail.com>", "pca006132 <john.lck40@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
tokio-serde = { version = "0.6.1", features = ["messagepack"] }
async-std = { version = "1.6.2", features = ["unstable"] }
rmp-serde = "0.14.3"
serde = "1.0"
futures = "0.3"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]
