[package]
name = "multi_pong"
version = "0.1.0"
authors = ["switefaster <switefaster@gmail.com>", "pca006132 <john.lck40@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.15.0", features = ["shader-compiler"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
futures = "0.3"
rudp = { path = "../rudp" }
rudp_derive = { path = "../rudp_derive" }
lazy_static = "1.4.0"
derivative = "2.1.1"
glsl-layout = "0.3.2"
failure = "0.1.8"
log = "0.4.11"

[dev-dependencies]
float-cmp = "0.8.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]
