[package]
name = "rudp"
version = "0.1.0"
authors = ["switefaster <switefaster@gmail.com>", "pca006132 <john.lck40@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
futures = "0.3"
serde_cbor = "0.11.1"
rand = "0.7.3"
tokio = { version = "0.2", features = ["full"] }
