[package]
name = "rudp"
version = "0.1.0"
authors = ["switefaster <switefaster@gmail.com>", "pca006132 <john.lck40@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
rand = "0.7.3"
log = "0.4.11"

[dev-dependencies]
env_logger = "0.7.1"
rudp_derive = { path = "../rudp_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
lazy_static = "1.4.0"
