[package]
name = "rudp"
version = "0.2.0"
authors = [
    "switefaster <switefaster@gmail.com>",
    "pca006132 <john.lck40@gmail.com>",
]
edition = "2018"
publish = ["internal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rand = "0.8.3"
log = "0.4.11"

[dev-dependencies]
env_logger = "0.8.1"
rudp_derive = { path = "../rudp_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
lazy_static = "1.4.0"
