[package]
name = "rudp_derive"
version = "0.1.0"
authors = ["switefaster <switefaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
rudp = { path = "../rudp" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
